enh: filter irrelevant imports in ContextFragments using ImportAnalysisProvider